--- a/package.json
+++ b/package.json
@@ -16,9 +16,19 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-universal-component": "^3.0.0",
+    "react-redux": "4.4.9",
+    "react-universal-component": "2.9.0",
+    "redux": "3.7.2",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-first-router": "^0.0.16-next",
+    "redux-first-router-link": "^1.4.2",
+    "redux-first-router-restore-scroll": "^1.2.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.5.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-flush-chunks": "^2.0.1"
+    "webpack-flush-chunks": "^2.0.1",
+    "yarn": "^1.9.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
@@ -39,7 +49,7 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "react-hot-loader": "^4.3.4",
-    "webpack": "^4.16.5",
+    "webpack": "4.15.1",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-hot-server-middleware": "^0.5.0",
     "write-file-webpack-plugin": "^4.3.2"
