--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development BABEL_ENV=development node server/index.js",
-    "prod": "NODE_ENV=production BABEL_ENV=production node server/index.js"
+    "prod": "NODE_ENV=production BABEL_ENV=production node server/index.js",
+    "clean": "rm -rf .{dev,prod}/{client,server}/**"
   },
   "dependencies": {
     "express": "^4.16.3",
