--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.5.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-flush-chunks": "^2.0.1",
-    "yarn": "^1.9.4"
+    "webpack-flush-chunks": "^2.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
