--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-redux": "4.4.9",
+    "react-redux": "^5.0.7",
     "react-universal-component": "2.9.0",
-    "redux": "3.7.2",
+    "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-first-router": "^0.0.16-next",
     "redux-first-router-link": "^1.4.2",
