--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "react-hot-loader": "^4.3.4",
-    "webpack": "4.15.1",
+    "webpack": "^4.16.5",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-hot-server-middleware": "^0.5.0",
     "write-file-webpack-plugin": "^4.3.2"
