--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-universal-import": "^3.0.0",
     "eslint": "^5.3.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
     "react-hot-loader": "^4.3.4",
