--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactlandia-boilerplate",
-  "description": "Universal, routed, code-split boilerplate based on Reactlandia packages",
-  "version": "1.0.0",
+  "description": "Barebone universal server-rendered code-split redux-first-routed boilerplate based on Reactlandia packages",
+  "version": "0.1.0",
   "main": "server/index.js",
   "author": "Ivan Aksamentov",
   "license": "MIT",
