--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-plugin-react": "^7.10.0",
     "react-hot-loader": "^4.3.4",
     "redux-immutable-state-invariant": "^2.1.0",
-    "webpack": "4.16.1",
+    "webpack": "^4.16.5",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-hot-server-middleware": "^0.5.0"
