Add react version to .eslintrc
To avoid warnings from the new version of `eslint-plugin-react`

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "plugin:react/recommended"
   ],
   "plugins": ["react", "babel"],
+  "settings": {"react": {"version": "16"}},
   "parserOptions": {
     "ecmaVersion": 8,
     "sourceType": "module",
