--- a/package.json
+++ b/package.json
@@ -31,27 +31,27 @@
     "webpack-flush-chunks": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
-    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "@babel/runtime": "^7.0.0-rc.1",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0-beta.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-universal-import": "^3.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.4.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.11.1",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.5",
     "redux-immutable-state-invariant": "^2.1.0",
-    "webpack": "^4.16.5",
-    "webpack-dev-middleware": "^3.1.3",
+    "webpack": "^4.17.1",
+    "webpack-dev-middleware": "^3.2.0",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-hot-server-middleware": "^0.5.0"
   }
