--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development BABEL_ENV=development node server/index.js",
     "prod": "cross-env NODE_ENV=production BABEL_ENV=production node server/index.js",
-    "clean": "rm -rf .dev/client/** .dev/server/** .prod/client/** .prod/server/**"
+    "static": "cross-env NODE_ENV=production BABEL_ENV=production IS_STATIC_BUILD=1 node server/static.js",
+    "clean": "rm -rf .dev/client/** .dev/server/** .prod/client/** .prod/server/** .static/client/** .static/server/** exported-static-website/**"
   },
   "dependencies": {
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "extract-css-chunks-webpack-plugin": "^3.1.0-beta.9",
+    "fs-extra": "^7.0.0",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "null-loader": "^0.1.1",
