--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "extract-css-chunks-webpack-plugin": "^3.1.1",
+    "extract-css-chunks-webpack-plugin": "^3.1.2-beta.6",
     "fs-extra": "^7.0.0",
     "history": "^4.7.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "null-loader": "^0.1.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
-    "react-universal-component": "2.9.0",
+    "react-universal-component": "^4.0.0-alpha.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-first-router": "^0.0.16-next",
+    "redux-first-router": "^1.9.19",
     "redux-first-router-link": "^1.4.2",
     "redux-first-router-restore-scroll": "^1.2.1",
     "serialize-javascript": "^1.5.0",
@@ -44,17 +44,17 @@
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
-    "babel-plugin-universal-import": "^3.0.1",
+    "babel-plugin-universal-import": "^4.0.0-alpha.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-loader": "^2.1.0",
-    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-react": "^7.11.1",
-    "react-hot-loader": "^4.3.5",
+    "react-hot-loader": "^4.3.8",
     "redux-immutable-state-invariant": "^2.1.0",
-    "webpack": "^4.17.2",
-    "webpack-dev-middleware": "^3.2.0",
-    "webpack-hot-middleware": "^2.23.1",
+    "webpack": "^4.19.0",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.24.0",
     "webpack-hot-server-middleware": "^0.5.0"
   }
 }
