Use rimraf for better compatibility with Windows

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "cross-env NODE_ENV=development BABEL_ENV=development node server/index.js",
     "prod": "cross-env NODE_ENV=production BABEL_ENV=production node server/index.js",
     "static": "cross-env NODE_ENV=production BABEL_ENV=production IS_STATIC_BUILD=1 node server/static.js",
-    "clean": "rm -rf .dev/client/** .dev/server/** .prod/client/** .prod/server/** .static/client/** .static/server/** exported-static-website/**"
+    "clean": "rimraf .dev/client/** .dev/server/** .prod/client/** .prod/server/** .static/client/** .static/server/** exported-static-website/**"
   },
   "dependencies": {
     "css-loader": "^1.0.0",
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.11.1",
     "react-hot-loader": "^4.3.8",
     "redux-immutable-state-invariant": "^2.1.0",
+    "rimraf": "^2.6.2",
     "webpack": "^4.19.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
