--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "lodash": "^4.17.11",
     "null-loader": "^0.1.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-universal-component": "^4.0.0-alpha.0",
     "redux": "^4.0.0",
@@ -33,21 +33,21 @@
     "redux-first-router-link": "^1.4.2",
     "redux-first-router-restore-scroll": "^1.2.1",
     "serialize-javascript": "^1.5.0",
-    "webpack-flush-chunks": "^2.0.1"
+    "webpack-flush-chunks": "^3.0.0-alpha.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
-    "babel-plugin-universal-import": "^4.0.0-alpha.0",
+    "babel-plugin-universal-import": "^4.0.0-alpha.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.6.0",
     "eslint-loader": "^2.1.0",
@@ -56,7 +56,7 @@
     "react-hot-loader": "^4.3.8",
     "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.2",
-    "webpack": "^4.19.0",
+    "webpack": "^4.19.1",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
     "webpack-hot-server-middleware": "^0.5.0"
