--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
-    "extract-css-chunks-webpack-plugin": "^3.1.2-beta.6",
+    "extract-css-chunks-webpack-plugin": "^3.1.3",
     "fs-extra": "^7.0.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
@@ -26,39 +26,39 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-universal-component": "^4.0.0-alpha.0",
+    "react-universal-component": "^4.0.0-alpha.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-first-router": "^1.9.19",
     "redux-first-router-link": "^1.4.2",
     "redux-first-router-restore-scroll": "^1.2.1",
     "serialize-javascript": "^1.5.0",
-    "webpack-flush-chunks": "^3.0.0-alpha.1"
+    "webpack-flush-chunks": "^3.0.0-alpha.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.2",
-    "babel-plugin-universal-import": "^4.0.0-alpha.3",
+    "@babel/runtime": "^7.1.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-universal-import": "^4.0.0-alpha.6",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-babel": "^5.2.0",
+    "eslint": "^5.6.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-react": "^7.11.1",
-    "react-hot-loader": "^4.3.8",
+    "react-hot-loader": "^4.3.11",
     "redux-immutable-state-invariant": "^2.1.0",
     "rimraf": "^2.6.2",
-    "webpack": "^4.19.1",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-hot-middleware": "^2.24.0",
+    "webpack": "^4.20.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.2",
     "webpack-hot-server-middleware": "^0.5.0"
   }
 }
